# live-analysis-template

./: Makefile  README.md  pyproject.toml  requirements.txt  start.sh  目录结构.md
api/: main.py
api/middleware/: auth.py  rate_limiter.py
api/routes/: customer_service.py  danmu.py
config/: .env  __init__.py  constants.py  settings.py
core/danmu_connector/: base.py  bilibili.py  douyin.py
core/nlp_engine/: emotion.py  intent.py
core/storage/: postgres.py  redis.py
docker/: .env  app.Dockerfile  docker-compose.yml  entrypoint.sh
docs/: API.md
migrations/: README.md  env.py
migrations/versions/: 20240310_init.py  20240401_add_analysis_flag.py
models/: model_manager.py  utils.py
models/emotion_v3/: config.json  model.py
requirements/: README.md  base.txt  dev.txt  prod.txt
scripts/: README.md  backup_db.sh  benchmark.py  data_migration.py  deploy_prod.sh  monitor.py
